--- a/src/scss/layout/_layout.scss
+++ b/src/scss/layout/_layout.scss
@@ -44,8 +44,33 @@
 }
 
 
-.post-type-archive.post-type-archive-product,.woocommerce-account, .single-product, .woocommerce-cart, .woocommerce-checkout {
-  main#content{
+.post-type-archive.post-type-archive-product, .woocommerce-account, .single-product, .woocommerce-cart, .woocommerce-checkout {
+  main#content {
     padding-top: 5vh;
+  }
+}
+
+
+.rv-breadcrumbs {
+  margin-bottom: 3vh;
+
+  nav.rank-math-breadcrumb {
+    a {
+      color: #F6F6F6;
+      &:hover{
+        color: $secondary-color;
+      }
+    }
+
+    p {
+      font-size: 12px;
+      text-transform: uppercase;
+      margin: 0;
+      color: #F6F6F6;
+
+      span.separator {
+        margin: 0 8px;
+      }
+    }
   }
 }
