--- a/src/scss/blocks/_faq-section.scss
+++ b/src/scss/blocks/_faq-section.scss
@@ -5,7 +5,7 @@
   background: linear-gradient(360deg, rgba(255, 255, 255, 0) 37.83%, #D5D5D5 200.55%);
   border-radius: 1rem;
   position: relative;
-  height: 100vh;
+  min-height: 100vh;
 
 
   &::after {
