--- a/src/scss/blocks/_home-products.scss
+++ b/src/scss/blocks/_home-products.scss
@@ -74,7 +74,12 @@
     .swiper-slide {
       height: auto;
     }
-
+    .swiper-pagination-progressbar{
+      background: #E2E0DF;
+      .swiper-pagination-progressbar-fill{
+        background: $primary-color;
+      }
+    }
     .swiper-pagination {
       position: static;
       display: flex;
@@ -82,6 +87,7 @@
       max-width: 400px;
       margin: 6vh auto 0;
       gap: 0;
+
 
       .swiper-pagination-bullet {
         width: 100%;
