--- a/src/scss/components/header/_mega-menu.scss
+++ b/src/scss/components/header/_mega-menu.scss
@@ -1,1 +1,202 @@
 @use '../../abstracts' as *;
+
+
+#megaMenu {
+  position: fixed;
+  top: 20px;
+  right: 20px;
+  width: 100%;
+  max-width: 900px;
+  height: 95vh;
+  background: #dedede;
+  z-index: 9999;
+  border-radius: 20px;
+  visibility: hidden;
+  opacity: 0;
+  transform: translateY(-30px) scale(0.95);
+  pointer-events: none;
+  overflow: hidden;
+  padding: 4rem 4rem 2rem;
+  transition: none;
+
+  &.is-open {
+    visibility: visible;
+    opacity: 1;
+    transform: translateY(0) scale(1);
+    pointer-events: auto;
+  }
+}
+
+.mega-overlay {
+  position: fixed;
+  inset: 0;
+  background: rgba(0, 0, 0, 0.40);
+  backdrop-filter: blur(0);
+  z-index: 9999;
+  visibility: hidden;
+  opacity: 0;
+  pointer-events: none;
+  transition: none;
+
+  &.is-open {
+    visibility: visible;
+    opacity: 1;
+    pointer-events: auto;
+  }
+}
+
+.mega-inner {
+  height: 100%;
+  overflow-y: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.mega-columns {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 4rem;
+  overflow-y: auto;
+  height: 60vh;
+
+  /* width */
+  &::-webkit-scrollbar {
+    width: 2px;
+  }
+
+  /* Track */
+  &::-webkit-scrollbar-track {
+    background: transparent;
+  }
+
+  /* Handle */
+  &::-webkit-scrollbar-thumb {
+    background: $primary-color;
+    border-radius: 4px;
+  }
+
+  /* Handle on hover */
+  &::-webkit-scrollbar-thumb:hover {
+    background: #555;
+  }
+
+}
+
+.mega-item {
+  margin-bottom: 1.5rem;
+}
+
+.mega-parent {
+  font-size: 32px;
+  font-weight: 300;
+  color: #222;
+  display: block;
+  margin-bottom: 5px;
+  transition: 0.2s;
+
+  &:hover {
+    color: $secondary-color;
+  }
+}
+
+.mega-sub {
+  display: flex;
+  flex-direction: column;
+  gap: 6px;
+}
+
+.mega-sub-link {
+  position: relative;
+  font-size: 15px;
+  color: #2F2F2F;
+  display: inline-flex;
+  align-items: baseline;
+  transition: color 0.25s ease;
+
+  &::before {
+    content: "";
+    width: 0;
+    height: 6px;
+    background-color: $secondary-color;
+    opacity: 0;
+    margin-right: 0;
+    transition: width 0.25s ease,
+    opacity 0.25s ease,
+    margin-right 0.25s ease;
+  }
+
+  &:hover {
+    color: $secondary-color;
+
+    &::before {
+      width: 6px;
+      opacity: 1;
+      margin-right: 8px;
+    }
+  }
+}
+
+
+.mega-footer {
+  margin-top: 3rem;
+  padding-top: 2rem;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 4rem;
+
+  h4 {
+    font-size: 10px;
+    font-weight: 700;
+    letter-spacing: 1.5px;
+    text-transform: uppercase;
+    margin-bottom: 1rem;
+    color: #6D6D6D;
+  }
+
+  .bottom_links {
+    margin-top: 4vh;
+
+    a {
+      font-size: 10px;
+      text-transform: uppercase;
+      color: #2F2F2F;
+    }
+  }
+}
+
+.mega-footer-links {
+  a {
+    display: flex;
+    align-items: center;
+    font-size: 20px;
+    color: $primary-color;
+    margin-bottom: 0.5rem;
+    transition: 0.3s;
+
+    &:hover {
+      color: $secondary-color;
+    }
+  }
+}
+
+.mega-close-btn {
+  position: absolute;
+  width: 40px;
+  height: 40px;
+  top: 1.2rem;
+  right: 1.2rem;
+  background: transparent;
+  border: 1px solid $secondary-color;
+  color: $primary-color;
+  padding: 6px;
+  border-radius: 6px;
+  cursor: pointer;
+  font-size: 14px;
+
+  &:hover {
+    background: #fff;
+    border: 1px solid #fff;
+    color: $primary-color;
+  }
+}
